--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/app-loading.css" />
+    <link rel="stylesheet" href="/iconfont/iconfont.css" />
     <title>%VITE_APP_TITLE%</title>
   </head>
   <body>
